<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.RegisterDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <ImageView
                android:id="@+id/RegisterImage"
                android:layout_gravity="center"
                android:layout_width="180dp"
                android:layout_height="180dp"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/imagenRegister" />

            <ImageView
                android:id="@+id/RegisterImagePen"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-50dp"
                android:layout_marginRight="-65dp"
                android:background="#919191"
                android:src="@android:drawable/ic_menu_edit"
                android:contentDescription="@string/imagenRegister"
                android:layout_marginEnd="-65dp" />

            <EditText
                android:id="@+id/RegisterFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_marginHorizontal="20dp"
                android:inputType="textPersonName"
                android:hint="@string/nameInput" />

            <EditText
                android:id="@+id/RegisterLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="20dp"
                android:inputType="textPersonName"
                android:hint="@string/lastnameInput" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="5dp">
            <TextView
                android:id="@+id/RegisterSexLabel"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:ems="10"
                android:textSize="18sp"
                android:text="@string/SexLabel" />

            <Spinner
                android:id="@+id/RegisterSexSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="20dp"
                android:paddingHorizontal="5dp">
                <TextView
                    android:id="@+id/RegisterBirthDateLabel"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:ems="10"
                    android:textSize="18sp"
                    android:text="@string/RegisterBirthDateLabel" />
                <TextView
                    android:id="@+id/RegisterBirthDate"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:ems="10"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="20dp"
                android:paddingHorizontal="5dp">
                <TextView
                    android:id="@+id/RegisterHeightLabel"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:ems="10"
                    android:textSize="18sp"
                    android:text="@string/RegisterHeightLabel" />
                <TextView
                    android:id="@+id/RegisterHeight"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:ems="10"
                    android:textSize="20sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="20dp"
                android:paddingHorizontal="5dp">
                <TextView
                    android:id="@+id/RegisterWeightLabel"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:ems="10"
                    android:textSize="18sp"
                    android:text="@string/RetgisterWeightLabel" />
                <TextView
                    android:id="@+id/RegisterWeight"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:ems="10"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/RegisterDetailSubmit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/RegisterSaveLabel"
                />
        </LinearLayout>
    </ScrollView>

</FrameLayout>